# MiniCode-rs

./: .gitignore  Cargo.toml  MULTI_IMPL.md  README.md  README.zh-CN.md  TODO.md
.github/workflows/: merge_feature.yml
apps/minicode/: Cargo.toml
apps/minicode/src/: agent_loop.rs  anthropic_adapter.rs  background_tasks.rs  cli.rs  cli_commands.rs  file_review.rs  install.rs  local_tool_shortcuts.rs  main.rs  manage_cli.rs  mcp.rs  mock_model.rs  permissions.rs  prompt.rs  skills.rs  tool.rs  tools.rs  tui.rs  utils.rs  workspace.rs
apps/minicode/src/cli/: handlers.rs  mod.rs
crates/minicode-agent-core/: Cargo.toml
crates/minicode-agent-core/src/: agent_loop.rs  anthropic_adapter.rs  lib.rs
crates/minicode-background-tasks/: Cargo.toml
crates/minicode-background-tasks/src/: lib.rs
crates/minicode-cli-commands/: Cargo.toml
crates/minicode-cli-commands/src/: lib.rs
crates/minicode-config/: Cargo.toml
crates/minicode-config/src/: lib.rs  path.rs  runtime.rs
crates/minicode-core/: Cargo.toml
crates/minicode-core/src/: lib.rs
crates/minicode-file-review/: Cargo.toml
crates/minicode-file-review/src/: lib.rs
crates/minicode-history/: Cargo.toml
crates/minicode-history/src/: input_history.rs  lib.rs  messages.rs  meta.rs  models.rs  persistence.rs  recovery.rs  runtime_state.rs  token_estimate.rs  utils.rs
crates/minicode-install/: Cargo.toml
crates/minicode-install/src/: lib.rs
crates/minicode-manage/: Cargo.toml
crates/minicode-manage/src/: lib.rs
crates/minicode-mcp/: Cargo.toml
crates/minicode-mcp/src/: lib.rs
crates/minicode-mock-model/: Cargo.toml
crates/minicode-mock-model/src/: lib.rs
crates/minicode-permissions/: Cargo.toml
crates/minicode-permissions/src/: lib.rs
crates/minicode-prompt/: Cargo.toml
crates/minicode-prompt/src/: lib.rs  prompt.txt
crates/minicode-shortcuts/: Cargo.toml
crates/minicode-shortcuts/src/: lib.rs
crates/minicode-skills/: Cargo.toml
crates/minicode-skills/src/: lib.rs
crates/minicode-tool/: Cargo.toml
crates/minicode-tool/src/: lib.rs  shortcut.rs
crates/minicode-tools-runtime/: Cargo.toml
crates/minicode-tools-runtime/src/: lib.rs
crates/minicode-tools-runtime/src/act/: ask_user.rs  mod.rs  skill.rs
crates/minicode-tools-runtime/src/command/: mod.rs  run_command.rs
crates/minicode-tools-runtime/src/file/: edit_file.rs  grep_file.rs  list_file.rs  mod.rs  patch_file.rs  read_file.rs  write_like.rs
crates/minicode-tools-runtime/src/web/: web_search.rs
crates/minicode-tui/: Cargo.toml
crates/minicode-tui/src/: input.rs  lib.rs  state.rs  theme.rs  turn.rs
crates/minicode-tui/src/render/: approval.rs  header.rs  mod.rs  transcript.rs  ui_utils.rs
crates/minicode-tui/src/turn/: busy_input.rs  event_apply.rs  mod.rs
crates/minicode-types/: Cargo.toml
crates/minicode-types/src/: lib.rs
crates/minicode-workspace/: Cargo.toml
crates/minicode-workspace/src/: lib.rs
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  FEATURE.md  FEATURE.zh-CN.md  MULTI_IMPL.md  MULTI_IMPL.zh-CN.md
