[workspace]
members = [
    "apps/minicode",
    "crates/minicode-agent-core",
    "crates/minicode-core",
    "crates/minicode-config",
    "crates/minicode-history",
    "crates/minicode-install",
    "crates/minicode-manage",
    "crates/minicode-mock-model",
    "crates/minicode-permissions",
    "crates/minicode-prompt",
    "crates/minicode-shortcuts",
    "crates/minicode-skills",
    "crates/minicode-mcp",
    "crates/minicode-tool",
    "crates/minicode-types",
    "crates/minicode-tools-runtime",
    "crates/minicode-workspace",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/LiuMengxuan04/MiniCode"
authors = ["Liu Mengxuan"]

[workspace.dependencies]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_imports = "warn"
unused_must_use = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
