[workspace]
members = [
    "apps/minicode",
    "crates/minicode-agent-core",
    "crates/minicode-core",
    "crates/minicode-config",
    "crates/minicode-history",
    "crates/minicode-install",
    "crates/minicode-manage",
    "crates/minicode-mock-model",
    "crates/minicode-permissions",
    "crates/minicode-prompt",
    "crates/minicode-shortcuts",
    "crates/minicode-skills",
    "crates/minicode-mcp",
    "crates/minicode-tool",
    "crates/minicode-types",
    "crates/minicode-tools-runtime",
    "crates/minicode-cli-commands",
    "crates/minicode-tui",
    "crates/minicode-workspace",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/harkerhand/Minicode-rs"
authors = ["harkerhand <harkerhand@outlook.com>"]

[workspace.dependencies]
minicode-config = { path = "crates/minicode-config" }
minicode-core = { path = "crates/minicode-core" }
minicode-history = { path = "crates/minicode-history" }
minicode-install = { path = "crates/minicode-install" }
minicode-manage = { path = "crates/minicode-manage" }
minicode-mock-model = { path = "crates/minicode-mock-model" }
minicode-permissions = { path = "crates/minicode-permissions" }
minicode-prompt = { path = "crates/minicode-prompt" }
minicode-shortcuts = { path = "crates/minicode-shortcuts" }
minicode-skills = { path = "crates/minicode-skills" }
minicode-agent-core = { path = "crates/minicode-agent-core" }
minicode-mcp = { path = "crates/minicode-mcp" }
minicode-tool = { path = "crates/minicode-tool" }
minicode-tools-runtime = { path = "crates/minicode-tools-runtime" }
minicode-cli-commands = { path = "crates/minicode-cli-commands" }
minicode-types = { path = "crates/minicode-types" }
minicode-tui = { path = "crates/minicode-tui" }
minicode-workspace = { path = "crates/minicode-workspace" }
minicode-background-tasks = { path = "crates/minicode-background-tasks" }
minicode-file-review = { path = "crates/minicode-file-review" }
anyhow = "1"
async-trait = "0.1"
dirs = "6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
uuid = "1"


[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_imports = "warn"
unused_must_use = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
