[workspace]
members = [
    "apps/minicode",
    "crates/minicode-agent-core",
    "crates/minicode-core",
    "crates/minicode-config",
    "crates/minicode-history",
    "crates/minicode-install",
    "crates/minicode-manage",
    "crates/minicode-mock-model",
    "crates/minicode-permissions",
    "crates/minicode-prompt",
    "crates/minicode-shortcuts",
    "crates/minicode-skills",
    "crates/minicode-mcp",
    "crates/minicode-tool",
    "crates/minicode-types",
    "crates/minicode-tools-runtime",
    "crates/minicode-cli-commands",
    "crates/minicode-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/harkerhand/Minicode-rs"
authors = ["harkerhand <harkerhand@outlook.com>"]

[workspace.dependencies]
minicode-config = { path = "crates/minicode-config" }
minicode-core = { path = "crates/minicode-core" }
minicode-history = { path = "crates/minicode-history" }
minicode-install = { path = "crates/minicode-install" }
minicode-manage = { path = "crates/minicode-manage" }
minicode-mock-model = { path = "crates/minicode-mock-model" }
minicode-permissions = { path = "crates/minicode-permissions" }
minicode-prompt = { path = "crates/minicode-prompt" }
minicode-shortcuts = { path = "crates/minicode-shortcuts" }
minicode-skills = { path = "crates/minicode-skills" }
minicode-agent-core = { path = "crates/minicode-agent-core" }
minicode-mcp = { path = "crates/minicode-mcp" }
minicode-tool = { path = "crates/minicode-tool" }
minicode-tools-runtime = { path = "crates/minicode-tools-runtime" }
minicode-cli-commands = { path = "crates/minicode-cli-commands" }
minicode-types = { path = "crates/minicode-types" }
minicode-tui = { path = "crates/minicode-tui" }
minicode-background-tasks = { path = "crates/minicode-background-tasks" }
minicode-file-review = { path = "crates/minicode-file-review" }
anyhow = "1.0.102"
async-trait = "0.1.89"
dirs = "6.0.0"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.51.0"
uuid = "1.23.0"
chrono = "0.4.44"
clap = "4.6.0"
crossterm = "0.29.0"
httpdate = "1.0.3"
jsonschema = "0.45.0"
rand = "0.10.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", default-features = false }
shell-words = "1.1.1"
similar = "3.0.0"
unicode-width = "0.2.2"
rmcp = { version = "1.3.0", default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
http = "1.3.1"


[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_imports = "warn"
unused_must_use = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
