[package]
name = "minicode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
minicode-agent-core = { path = "../../crates/minicode-agent-core" }
tokio = { version = "1", features = ["full"] }
minicode-core = { path = "../../crates/minicode-core" }
minicode-install = { path = "../../crates/minicode-install" }
minicode-manage = { path = "../../crates/minicode-manage" }
minicode-mock-model = { path = "../../crates/minicode-mock-model" }
minicode-permissions = { path = "../../crates/minicode-permissions" }
minicode-tools-runtime = { path = "../../crates/minicode-tools-runtime" }
minicode-tui = { path = "../../crates/minicode-tui" }

[lints]
workspace = true
