[package]
name = "minicode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
minicode-core = { workspace = true }

serde_json = { workspace = true }

[lints]
workspace = true
