[package]
name = "minicode-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
httpdate = "1"
minicode-tool = { workspace = true }
minicode-types = { workspace = true }
minicode-config = { workspace = true }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[lints]
workspace = true
