[package]
name = "minicode-background-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
minicode-tool = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[lints]
workspace = true
