[package]
name = "minicode-history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
minicode-config = { path = "../minicode-config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
minicode-types = { path = "../minicode-types" }

[lints]
workspace = true
