[package]
name = "minicode-install"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
minicode-config = { workspace = true }

[lints]
workspace = true
