[package]
name = "minicode-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
minicode-core = { path = "../minicode-core" }
minicode-tool = { path = "../minicode-tool" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
