[package]
name = "minicode-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
minicode-prompt = { workspace = true }

[lints]
workspace = true
