[package]
name = "minicode-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
jsonschema = "0.18"
minicode-permissions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
minicode-prompt = { workspace = true }

[lints]
workspace = true
