[package]
name = "minicode-tools-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
minicode-background-tasks = { path = "../minicode-background-tasks" }
minicode-core = { path = "../minicode-core" }
minicode-file-review = { path = "../minicode-file-review" }
minicode-mcp = { path = "../minicode-mcp" }
minicode-permissions = { path = "../minicode-permissions" }
minicode-skills = { path = "../minicode-skills" }
minicode-tool = { path = "../minicode-tool" }
minicode-workspace = { path = "../minicode-workspace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
tokio = { version = "1", features = ["process", "rt", "time"] }

[lints]
workspace = true
