[package]
name = "minicode-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = "0.4"
crossterm = "0.29"
minicode-agent-core = { workspace = true }
minicode-background-tasks = { workspace = true }
minicode-cli-commands = { workspace = true }
minicode-history = { workspace = true }
minicode-permissions = { workspace = true }
minicode-shortcuts = { workspace = true }
minicode-tool = { workspace = true }
minicode-config = { workspace = true }
minicode-types = { workspace = true }
minicode-prompt = { workspace = true }
ratatui = "0.29"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
unicode-width = "0.1"

[lints]
workspace = true
